src/objects/Settlement_Management__c.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Case_Settlements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Customer_Settlement_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Customer Settlement Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer_Settlement_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Dealer Settlement Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MB_Settlement_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MB Settlement Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Settlement_Type__c</fullName>
        <label>Other Settlement Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_WithSettlement__c</fullName>
        <formula>if( ISPICKVAL(Settlement_Type__c ,&apos;No Settlement Require&apos;),0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>With Settlement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>R_Without_Settlement__c</fullName>
        <formula>if( ISPICKVAL(Settlement_Type__c ,&apos;No Settlement Require&apos;),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Without Settlement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Settlement_Type__c</fullName>
        <label>Settlement Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Settlement Require</fullName>
                </value>
                <value>
                    <fullName>Cash Settlement</fullName>
                </value>
                <value>
                    <fullName>Gift Settlement</fullName>
                </value>
                <value>
                    <fullName>Goodwill Offered</fullName>
                </value>
                <value>
                    <fullName>Vehicle Buyback</fullName>
                </value>
                <value>
                    <fullName>Vehicle Trade-In</fullName>
                </value>
                <value>
                    <fullName>Repair voucher</fullName>
                </value>
                <value>
                    <fullName>Extend Warranty</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Settlement_Amount__c</fullName>
        <formula>Dealer_Settlement_Amount__c +  MB_Settlement_Amount__c + Customer_Settlement_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Settlement Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Settlement Management</label>
    <nameField>
        <displayFormat>CSN-{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Settlement Managements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Other_Settlement_Type_Mandatory</fullName>
        <active>true</active>
        <description>When Settlement Type is &quot;Others&quot;, &quot;Other Settlement Type&quot; field should be mandatory.</description>
        <errorConditionFormula>ISPICKVAL( Settlement_Type__c , &apos;Others&apos;) &amp;&amp;  ISBLANK( Other_Settlement_Type__c )</errorConditionFormula>
        <errorMessage>Please fill in Other Settlement Type.</errorMessage>
    </validationRules>
</CustomObject>